# sdap-os

./: .gitignore  README.md  setup.cfg  setup.py
src/sdap/: main.py  utils.py  webapp.py
src/sdap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdap/data_access/: CollectionLoader.py  S3COGDriver.py  __init__.py
src/sdap/data_access/drivers/: Key.py  S3COG.py  __init__.py
src/sdap/data_access/drivers/S3COG/: FetchS3COGTileActor.py  FetchS3COGTileActorBuilder.py  S3COG.py  __init__.py
src/sdap/data_access/index/spatial/: GoogleS2.py  HealPix.py  MGRS.py  NoTile.py  Sentinel2Grid.py  __init__.py
src/sdap/data_access/index/temporal/: Daily.py  __init__.py
src/sdap/ingestion/: NetCDFL2.py  __init__.py
src/sdap/operators/: EVI.py  Identity.py  SpatialMean.py  __init__.py
src/sdap/test/data_access/: collection-config.yaml  secrets.yaml  test_CollectionLoader.py  test_S3COGDriver.py
src/sdap/test/data_access/drivers/: test_S3COG.py
src/sdap/test/data_access/index/: test_Sentinel2Grid.py
src/sdap/test/data_access/index/spatial/: test_GoogleS2.py  test_MGRS.py  test_Sentinel2Grid.py
src/sdap/test/data_access/index/temporal/: test_Daily.py
src/sdap/test/ingestion/: test_NetCDFL2.py
src/sdap/test/operators/: test_EVI.py  test_SpatialMean.py
src/sdap/webapp_resources/: CollectionById.py  Collections.py  Home.py  __init__.py
src/sdap_os.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
