[metadata]
name = sdap
version = file: src/sdap/VERSION.txt
author = SDAP
author_email = thomas.g.loubrieu@jpl.nasa.gov
description = Demo of usage of object storage for SDAP
long_description = file: README.md
long_description_content_type = text/markdown
license = apache-2.0
keywords = sdap, cog, s3
url =
download_url =
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering


[options]
install_requires =
    boto3==1.20.20
    matplotlib==3.5.0
    geopandas==0.10.2
    utm==0.7.0
    mgrs==1.4.2
    rioxarray==0.9.0
    xarray==0.20.2
    #rasterio==1.2.10
    pyproj==3.3.0
    numpy==1.21.4

zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.9
test_suite = sdap.test


[options.extras_require]
dev =

# 👉 Note: The ``-stubs`` and ``types-`` dependencies above ↑ in the ``dev``
# extra must be duplicated in ``.pre-commit-config.yaml`` in order for ``tox``
# to successfully run ``mypy`` to successfully do the static type linting.
# You can run ``mypy`` standalone just fine. This repetition is unfortunate
# but we don't have a way around it right now 😔


[options.entry_points]


[options.packages.find]
where = src


[options.package_data]


[coverage:run]
# No patterns to omit at this time


[test]

[tool:pytest]
addopts = -n auto

[install]

[flake8]
max-line-length = 120
extend-exclude = docs,tests,setup.py
docstring_convention = google

# Ignoring:
# E203 prevents flake8 from complaining about whitespace around slice
# components. Black formats per PEP8 and flake8 doesn't like some of
# this.
#
# E501 prevents flake8 from complaining line lengths > 79. We will use
# flake8-bugbear's B950 to handle line length lint errors. This trips
# when a line is > max-line-length + 10%.
#
# W503 is ignored for ``pds-doi-service`` not just because it makes use of
# left-aligned binary operators in multi-line expressions, but because the
# opposite advice is now the recommended practice; see
# • https://rhodesmill.org/brandon/slides/2012-11-pyconca/#laying-down-the-law
# • https://github.com/PyCQA/pycodestyle/pull/502
# • https://www.flake8rules.com/rules/W503.html
# • ET Tufte, _Seeing with Fresh Eyes: Meaning, Space, Data, Truth_, Graphics
#   Press 2020, p.14.
extend-ignore = E203, E501, W503

# Selects following test categories:
# D: Docstring errors and warnings
# E, W: PEP8 errors and warnings
# F: PyFlakes codes
# N: PEP8 Naming plugin codes
# B: flake8-bugbear codes
# B***: Specific flake8-bugbear opinionated warnings to trigger
#   B902: Invalid first argument used for method. Use self for instance
#       methods, and cls for class methods
#   B903: Use collections.namedtuple (or typing.NamedTuple) for data classes
#       that only set attributes in an __init__ method, and do nothing else.
#   B950: Line too long. This is a pragmatic equivalent of pycodestyle's
#       E501: it considers "max-line-length" but only triggers when the value
#       has been exceeded by more than 10%.
select = D,E,F,N,W,B,B902,B903,B950

[mypy]
# No patterns to ignore at this time